version: 5.4 - fix initialization issue of configuration and entityManagerFactory - handle GET and DELETE players contract properly (forward request) - write tests for GET players contract - adjust signature of updateTeamOfPlayer to return single player - clear playerId after request processing